[gd_scene load_steps=12 format=2]

[ext_resource path="res://GFX/Miscellaneous/CheckpointDeactivated.png" type="Texture" id=1]
[ext_resource path="res://GFX/Miscellaneous/CheckpointActivated.png" type="Texture" id=2]
[ext_resource path="res://Scripts/General/Checkpoint.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Bonuses/appear.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Main/checkpoint1.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Main/checkpoint2.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Main/checkpoint3.ogg" type="AudioStream" id=7]
[ext_resource path="res://GFX/Miscellaneous/CheckpointEffect.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Effects/CheckpointEffect.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "active",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 56 )

[node name="Checkpoint" type="Area2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 9, -55 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -56 )
shape = SubResource( 2 )

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="MSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sounds"

[node name="MSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Sounds"

[node name="MSound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Sounds"

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -88 )
texture = ExtResource( 8 )
script = ExtResource( 9 )
